--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,6 +8,7 @@
 
     <EditText
         android:id="@+id/inputText"
+        android:layout_marginTop="60dp"
         android:hint="Enter GET URL"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
